--- a/marzo_30_2024.md
+++ b/marzo_30_2024.md
@@ -1,6 +1,6 @@
 En este momento, me encuentro desarrollando el sitio web oficial de Sebas y quiero que tú seas mi asistente para desarrollar esa labor. He decidido asignarte el área de los Documentos. Estos serán como una especie de mezcla entre tutoriales y noticias, que servirán para romper el hielo entre el usuario y una tecnología tan intimidante como lo es la Inteligencia Artificial Generativa.
 
-A partir de ahora, voy a empezar a pasarte archivos en formato `markdown` los cuales cual corresponden a las entradas de blog de una plantilla de sitios web desarrollados en Astro. Estas entradas de blog serán modificadas para ser el contenido de la sección de los Documentos. Voy a desarrollar una parte del contenido, incluyendo los títulos y la metadata y tu labor será, con base en la información que tienes de Sebas y de su modelo de negocio y servicios, reemplazar todos los textos que están en inglés, conectando su contenido con los títulos de cada sección y conservando el concepto y los servicios de Sebas.
+A partir de ahora, voy a empezar a pasarte archivos en formato `markdown` los cuales corresponden a las entradas de blog de una plantilla de sitios web desarrollada en Astro. Estas entradas de blog serán modificadas para ser el contenido de la sección de los Documentos. Voy a desarrollar una parte del contenido, incluyendo los títulos y la metadata y tu labor será, con base en la información que tienes de Sebas y de su modelo de negocio y servicios, reemplazar todos los textos que están en inglés, conectando su contenido con los títulos de cada sección y conservando el concepto y los servicios de Sebas.
 
 ```markdown
 ---
